# ahp-end-game

./: .dockerignore  .env.example  .firebaserc  .gitattributes  .gitignore  .gitignore.tmpmove  APPLY_FIXES.md  APPLY_INSTRUCTIONS.md  AUDIT_REPORT.md  BUGS_AND_ISSUES_REPORT.md  DROP_IN_GUIDE.md  Dockerfile  Dockerfile.gateway  HOSPAIN_MASTER_GUIDE.md  HOSPYN_CTO_BLUEPRINT_PART_1.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY_FIXES_README.md  _check_chain.py  add_ticket_source.sql  alembic.ini  alembic_fix.ini  backup.sh  check_prod.py  chitti_response.json  conftest.py  create_admin_safe.py  create_superadmin.py  deploy.yml  deploy_phase5_6.sh  docker-compose.yml  entrypoint.sh  firebase.json  gemini_direct_resp.json  line_by_line_audit.md  logs_send_otp.json  nginx.conf  package-lock.json  package.json  (+34 more)
.firebase/: hosting.ZG9jdG9yLWFwcFxidWlsZA.cache  hosting.aG9zcGl0YWwtZXJwXGRpc3Q.cache  hosting.aG9zcHluLXYyLXdlYlxkaXN0.cache  hosting.cGF0aWVudC1hcHBcd2ViLWJ1aWxk.cache
alembic/: env.py  phase3_new_tables.py
app/: main.py
backend/: DEPLOYMENT_GUIDE.md  README.md  ruff.toml
doctor-app/: .env.example  .gitignore  PRODUCTION_READINESS_REPORT.md  README.md  apiClient.js  index.html  package-lock.json  package.json  vite.config.mjs
hospital-erp/: package-lock.json  package.json
hospyn-fixes/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gateway  backup.sh  docker-compose.yml  entrypoint.sh  nginx.conf  pytest.ini  rotate_secrets.sh  start_api.py
hospyn-v2-web/: .env.example  .env.production  FIREBASE_DEPLOY.md  OwnerDashboard.jsx  index.html  package.json  vite.config.js
hr-portal/: .env.example  index.css  index.html
infra/: .env.example  docker-compose.yml  init-db.sh  nginx.conf
matrix/: HOW_TO_LOGIN_AND_MANAGE_EMPLOYEES.md  IMPLEMENTATION_GUIDE.md  vite.config.js
nginx/: Dockerfile  nginx.conf
partner-app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
patient-app/: .env.example  .gitignore  App.js  apiClient.js  app.json  eas.json  index.html  package-lock.json  package.json  start-web.js  usePushNotifications.js  webpack.config.js
patient_fixes/: .env.example
pharma-mobile-app/: .env.example  App.js  app.json  capture.js  package-lock.json  package.json
phase07-docker-devops/: docker-compose.yml  (+1 more)
(+1274 files in other folders)
