[project]
name = "hospyn-2-0"
version = "0.1.0"
description = "AI Health Passport - Enterprise Grade Backend"
authors = [{name = "Antigravity", email = "ai@hospyn.com"}]
readme = "README.md"
requires-python = "^3.11"

dependencies = [
    "fastapi[all]>=0.110.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "arq>=0.25.0",
    "asyncpg>=0.29.0",
    "Pillow>=10.2.0",
    "pytesseract>=0.3.10",
    "cryptography>=42.0.0",
    "psutil>=5.9.0",
    "twilio>=9.10.3,<10.0.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "psycopg2-binary>=2.9.0",
    "google-cloud-storage>=2.10.0",
    "prometheus-client>=0.20.0",
    # Phase 12: OpenTelemetry (was 'ready' in README, now actually wired)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    # Phase 14: multi-worker performance
    "uvloop>=0.19.0",
    "httptools>=0.6.0",
]

[dependency-groups]
dev = [
    # Phase 11: full test suite
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "anyio[trio]>=4.3.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.7",
    "locust>=2.44.0,<3.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "scripts"]
timeout = 30
markers = [
    "unit: Pure unit tests (no I/O)",
    "integration: Tests requiring DB/Redis",
    "red_team: Security attack simulations",
    "chaos: Chaos engineering tests",
]
